change - displacing nav elements

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                             <p class="p2">PJ</p>
                         </div>
                         <div class="menu__box-div--center column" style="color: var(--black)">
-                            <a href="" class="link menu-link h2 font-style--bold">HOME</a>
-                            <a href="" class="link menu-link h2 font-style--bold">ABOUT</a>
-                            <a href="" class="link menu-link h2 font-style--bold">CONTACT</a>
+                            <a href="#home" class="link menu-link h2 font-style--bold">HOME</a>
+                            <a href="#about-1" class="link menu-link h2 font-style--bold">ABOUT</a>
+                            <a href="#contact" class="link menu-link h2 font-style--bold">CONTACT</a>
                         </div>
                         <div class="menu__box-div--bottom row" style="color: var(--black)">
                             <div class="menu__light-toggle--container flex">
@@ -151,10 +151,11 @@
                     <div class="contact__container--top row">
                     </div>
                 </div>
-                <div class="contact__container--center flex">
+                <div class="contact__container--center column">
                     <a href="mailto:hello@pedrojgil.com" class="link main-link h2">
                         HELLO@PEDROJGIL.COM
                     </a>
+                    
                 </div>
                 <div class="contact__container--bottom row">
                     <a href="#" class="link secondary-link p3">Github</a>
