Fix: mediaQuery handler. Change: Menu bottom container padding.

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                 </div>
                 <div class="about-1__description-container flex--1 column">
                     <div class="flex--1 description-box I z-index--1">
-                        <p class="p1 font-weight--medium">Multidisciplinary<br>digital<br>designer</p>
+                        <p class="p1 font-weight--medium flex">Multidisciplinary<br>digital designer</p>
 
                     </div>
                     <div class="flex--1 description-box II z-index--1">
-                        <p class="p1 font-weight--medium text-align--center flex--1">with strong background<br>as visual dev</p>    
+                        <p class="p1 font-weight--light text-align--center flex--1 italic color--main opacity--05">(with strong background<br>in visual development)</p>    
                     </div>
                     <div class="flex--1 description-box III z-index--1">
-                        <p class="p1 font-weight--medium text-align--right">working <span class="p1-pf font-family--playfair">solo & coop</span><br>for brands<br>all around the globe.</p>
+                        <p class="p1 font-weight--medium">working <span class="p1-pf font-family--playfair">solo & coop</span><br>for brands around the globe.</p>
                     </div>
                 </div>
                 <div class="about-1__lineart-container lineart-container border--round flex absolute">
@@ -125,20 +125,20 @@
                     <a href="#about-3" class="about-2__arrow scroll-arrow"></a>
                 </div>
 
-                <div class="about-2__description-container flex z-index--1">
-                    <div class="about-2__text-box flex flex--1 padding--3rem justify-content--center align-items--center">
-                        <h3 class="h3">ADAPTIVE</h3>
+                <div class="about-2__description-container top flex z-index--1">
+                    <div class="about-2__text-box I flex flex--1">
+                        <h3 class="h2">ADAPTIVE</h3>
                     </div>
-                    <div class="flex flex--1 justify-content--center align-items--center">
-                        <h3 class="h3">DESIGN</h3>
+                    <div class="about-2__text-box II flex flex--1">
+                        <h3 class="h2">DESIGN</h3>
                     </div>
                 </div>
 
-                <div class="about-2__description-container flex z-index--1">
-                    <div class="column flex--1 justify-content--center align-items--center">
+                <div class="about-2__description-container bottom flex z-index--1">
+                    <div class="about-2__text-box III column flex--1">
                         <p class="p1 font-weight--medium text-align--left">My job is to fit<br>my vision & skills</p>
                     </div>
-                    <div class="flex flex--1 justify-content--center align-items--center">
+                    <div class="about-2__text-box IV flex flex--1">
                         <p class="p1 font-weight--medium text-align--right">into your<br>project’s needs.</p>
                     </div>
                 </div>
