--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <section id="home" class="section__home section flex">
             <article class="home__article article__container" style="background-color: var(--main);">
                 <div class="home__arrow-slot arrow-slot section__arrow flex" style="border: none;">
-                    <a href="#about-1" class="home__arrow scroll-arrow"></a>
+                    <div class="relative">
+                        <a href="#about-1" class="home__arrow scroll-arrow"></a>
+                    </div>
                 </div>
                 <div class="home__portrait-box">
                     <input type="checkbox" id="portrait-toggle" class="">
@@ -86,7 +88,9 @@
                     </div>
                 </div>
                 <div class="arrow-slot section__arrow flex background--white border-color--main">
-                    <a href="#about-2" class="about-1__arrow scroll-arrow"></a>
+                    <div class="relative">
+                        <a href="#about-2" class="about-1__arrow scroll-arrow"></a>
+                    </div>
                 </div>
                 <div class="about-1__description-container flex--1 column">
                     <div class="flex--1 description-box I z-index--1">
@@ -94,7 +98,7 @@
 
                     </div>
                     <div class="flex--1 description-box II z-index--1">
-                        <p class="p1 font-weight--light text-align--center flex--1 italic color--main opacity--05">(with strong background<br>in visual development)</p>    
+                        <p class="p1 font-weight--light text-align--center flex--1 italic color--main opacity--07">(with strong background<br>in visual development)</p>    
                     </div>
                     <div class="flex--1 description-box III z-index--1">
                         <p class="p1 font-weight--medium">working <span class="p1-pf font-family--playfair">solo & coop</span><br>for brands around the globe.</p>
@@ -122,7 +126,9 @@
                     </div>
                 </div>
                 <div class="arrow-slot section__arrow flex background--grey-100">
-                    <a href="#about-3" class="about-2__arrow scroll-arrow"></a>
+                    <div class="relative">
+                        <a href="#about-3" class="about-2__arrow scroll-arrow"></a>
+                    </div>
                 </div>
 
                 <div class="about-2__description-container top flex z-index--1">
@@ -166,7 +172,10 @@
                     </div>
                 </div>
                 <div class="arrow-slot section__arrow flex background--grey-200 z-index--10">
-                    <a href="#contact" class="about-3__arrow scroll-arrow"></a>
+                    <div class="relative">
+                        <a href="#contact" class="about-3__arrow scroll-arrow"></a>
+                    </div>
+                    
                 </div>
                 <div class="about-3__skill--container column z-index--5">
                     <p class="about-3__skill-letter">a)</p>
