--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Pedro J. Gil - Web dev - UX/UI designer</title>
 </head>
 <body>
     <nav>
@@ -74,7 +74,6 @@
                     <h2 class="p1 line-height--100 font-weight--bold">UX/UI DESIGNER</h2>
                     <h2 class="p1 line-height--100 font-weight--bold">VISUAL <span class="font-weight--thin italic" style="color: var(--white); font-weight: 300;">&</span> WEB<br>DEVELOPER</h2>
                 </div>
-                <div></div>
                 
             </article>
             
